--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,25 @@
 buildscript {
     repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
         jcenter()
     }
     
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "gradle.plugin.com.google.cloud.tools:jib-gradle-plugin:2.1.0"
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'application'
+apply plugin: "com.google.cloud.tools.jib"
 
 group 'jib'
 version '0.0.1-SNAPSHOT'
 mainClassName = "io.ktor.server.netty.EngineMain"
+targetCompatibility = 11
 
 sourceSets {
     main.kotlin.srcDirs = main.java.srcDirs = ['src']
@@ -31,5 +37,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "io.ktor:ktor-server-netty:$ktor_version"
     implementation "ch.qos.logback:logback-classic:$logback_version"
+//    implementation "software.amazon.awssdk:sqs:2.12.0"
+    implementation "com.amazonaws:aws-java-sdk-sqs:1.11.764"
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.10.3"
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
 }
