--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,8 @@
-buildscript {
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-        jcenter()
-    }
-    
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "gradle.plugin.com.google.cloud.tools:jib-gradle-plugin:2.1.0"
-    }
+plugins {
+    id 'com.google.cloud.tools.jib' version '2.2.0'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+    id 'application'
 }
-
-apply plugin: 'kotlin'
-apply plugin: 'application'
-apply plugin: "com.google.cloud.tools.jib"
 
 group 'jib'
 version '0.0.1-SNAPSHOT'
